<resources>
    <string name="app_name">selfmade-double</string>
    <string name="numres">%d</string>
    <string name="num_0">0</string>
    <string name="num_1">1</string>
    <string name="num_2">2</string>
    <string name="num_3">3</string>
    <string name="num_4">4</string>
    <string name="num_5">5</string>
    <string name="num_6">6</string>
    <string name="num_7">7</string>
    <string name="num_8">8</string>
    <string name="num_9">9</string>
    <string name="num_add">+</string>
    <string name="num_min">-</string>
    <string name="num_mul">*</string>
    <string name="num_div">/</string>
    <string name="num_dot">.</string>
    <string name="num_eq">=</string>
    <string name="num_C">C</string>
</resources>